# NhutReader

./: .gitignore  LICENSE  README.md  README_VI.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/nhut/hoshi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/hoshi-web/popup/: popup.css  popup.js
app/src/main/assets/hoshi-web/reader/: reader-continuous.js  reader-paginated.js  reader.css
app/src/main/assets/hoshi-web/shared/: selection.js
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/nhut/hoshi/: HoshiApplication.kt  HoshiUiDependencies.kt  MainActivity.kt  ProcessTextLookupRequest.kt
app/src/main/java/de/manhhao/hoshi/: HoshiDicts.kt
app/src/main/java/uniffi/hoshiepub/: hoshiepub.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_material_rounded_arrow_forward.xml  ic_material_rounded_close.xml  ic_material_rounded_pause.xml  ic_material_rounded_play_arrow.xml  ic_material_rounded_refresh.xml  ic_material_rounded_replay.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/main/rust/hoshiepub/: Cargo.toml
app/src/test/js/: reader-paginated.test.mjs
doc bao cao/: BÁO CÁO_ LaptopStore_Final.docx  CaloEasyFinalDocument.docx
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+385 files in other folders)
